Ant Design libraly installed, reafactored code

--- a/src/App.css
+++ b/src/App.css
@@ -138,14 +138,12 @@ table {
   margin-top: 0.5em;
 }
 
-#inputMain{
-  flex-grow: 2;
-}
+
 
 .app_header{
   background-color: white;
   padding: 10px;
-  object-fit: contain;
+  /* object-fit: contain; */
   border-bottom: 1px solid lightgray;
 }
 
