--- a/src/Post/Post.css
+++ b/src/Post/Post.css
@@ -1,5 +1,5 @@
 .post{
-    max-width: 50em;
+    max-width: 500px;
     background-color: white;
     border: 1px solid lightgrey;
     margin-bottom: 4em;
