--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(245, 237, 226);
+  background-color: rgb(250,250,250);
 }
 
 
