--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -1,10 +1,8 @@
-.home_page{
-    display: flex;
-    margin: 3%;
-    justify-content: center;
-}
-
-.home_posts{
-    /* margin: 3% 19%; */
+.home_page {
+  width: 960px;
+  display: flex;
+  margin: auto;
+  justify-content: flex-start;
+  position: relative;
 }
 
