--- a/src/ProfileSection/ProfileSection.css
+++ b/src/ProfileSection/ProfileSection.css
@@ -1,6 +1,8 @@
 .profile_section {
-  width: 300px;
-  margin-left: 8%;
+  width: 325px;
+  margin-top:  1.4em;
+  position: fixed;
+  right: 18%;
 }
 
 .profile_section_header {
