--- a/src/ExplorePost/ExplorePost.module.css
+++ b/src/ExplorePost/ExplorePost.module.css
@@ -1,20 +1,31 @@
-.postLayout{
-    position: relative;
+.postLayout {
+  cursor: pointer;
+  position: relative;
 
-    box-sizing: border-box;
-    margin: 0.5em;
+  box-sizing: border-box;
+  margin: 0.5em;
 }
 
-.aditives{
-    color: white;
-    display: none;
-    position:  absolute;
-    top: 50%;
-    left: 30%;
+.aditives {
+  display: none;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  pointer-events: none;
+  color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
-.imagebox:hover +  .aditives{
-display: block;
+
+.imagebox:hover {
+  opacity: 1;
 }
 
-
+.imagebox:hover + .aditives {
+  display: flex;
+}
