--- a/src/ProfileSection/ProfileSection.css
+++ b/src/ProfileSection/ProfileSection.css
@@ -1,5 +1,5 @@
 .profile_section {
-  width: 325px;
+  width: 305px;
   margin-top:  1.4em;
   position: fixed;
   right: 18%;
@@ -38,4 +38,32 @@
   font-weight: normal;
   font-family: sans-serif;
   font-size: 16px;
+}
+
+input[type ="file"]{
+  display: none;
+}
+
+.upload_label{
+  height: 51px;
+  width: 100%;
+  color: white;
+  font-size: 20px;
+  background: #4051b5a6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.new_post_header{
+  text-align: center;
+}
+
+.modal{ 
+  display: flex;
+  flex-direction: column;
+}
+
+.modal > *{ 
+  margin: 10px 0 15px 0;
 }
