--- a/src/Post/Post.css
+++ b/src/Post/Post.css
@@ -33,3 +33,42 @@
 .post_comments {
   padding: 20px;
 }
+
+/* almost the same as new_post_btn -> correct when scass available  */
+.post_btn{
+  border: none;
+  background: transparent;
+  color: rgba(var(--d69, 0, 149, 246), 1);
+  font-size: 17px;
+  font-weight: 600;
+  outline: none;
+}
+
+.post_textarea{
+  background: 0 0;
+  border: 0;
+  color: #262626;
+
+  display: flex;
+  flex-grow: 1;
+  font-size: inherit;
+  height: 18px;
+  max-height: 80px;
+  outline: 0;
+  padding: 0;
+  resize: none;
+  /* width: 0; */
+}
+
+.comments_form{
+  display: flex;
+  border-top: 1px solid lightgrey;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-top: 4px;
+  height: 3em;
+}
+
+.emoji_picker{
+  display:none;
+}
