--- a/src/ProfilePage/ProfilePage.module.scss
+++ b/src/ProfilePage/ProfilePage.module.scss
@@ -20,9 +20,10 @@
       margin-left: 3%;
       display: flex;
       justify-content: space-between;
-      
+
       a {
         color: black;
+        margin-right: 1em;
       }
     }
 
