--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -1,10 +1,10 @@
 .app_header {
   position: fixed;
-  
+
   top: 0px;
   width: 100%;
   color: black;
-  background-color: white  ;
+  background-color: white;
   height: 54px;
   border-bottom: 1px solid lightgray;
   margin-bottom: 40px;
@@ -67,4 +67,33 @@
   text-decoration: none;
   height: 24px;
   width: 24px;
+}
+
+
+.options {
+  display: none;
+  position: absolute;
+  margin-top:-10px;
+  padding-top: 0;
+  padding: 10px;
+  background-color: white;
+  border: none !important;
+  top: 3em;
+  right: 15%;
+
+  font-size: 16px !important;
+  p{
+    cursor: pointer;
+
+  }
+  a{
+    text-decoration: none;
+    cursor: pointer;
+  }
+}
+.options:hover {
+  display: block;
+}
+.profile_nav:hover + .options {
+  display: block;
 }
