--- a/src/ProfileSection/ProfileSection.css
+++ b/src/ProfileSection/ProfileSection.css
@@ -1,6 +1,6 @@
 .profile_section {
   width: 305px;
-  margin-top:  1.4em;
+  margin-top: 1.4em;
   position: fixed;
   right: 18%;
 }
@@ -23,13 +23,18 @@
 }
 
 .new_post_btn {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
   border: none;
   background: transparent;
   color: rgba(var(--d69, 0, 149, 246), 1);
   font-size: 15px;
   font-weight: 600;
 }
-
+#insideText {
+  margin-right: 8px;
+}
 .progress {
   width: 100%;
 }
@@ -40,11 +45,11 @@
   font-size: 16px;
 }
 
-input[type ="file"]{
+input[type="file"] {
   display: none;
 }
 
-.upload_label{
+.upload_label {
   height: 51px;
   width: 100%;
   color: white;
@@ -54,18 +59,19 @@ input[type ="file"]{
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
 }
 
-.new_post_header{
+.new_post_header {
   text-align: center;
 }
 
-.modal{ 
+.modal {
   display: flex;
   flex-direction: column;
 }
 
-.modal > *{ 
+.modal > * {
   margin: 10px 0 15px 0;
 }
