--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'Snell-Roundhand';
+  src: local('Snell-Roundhand'), url(./Fonts/Snell-Roundhand-Script.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Handlee-Regular';
+  src: local('Handlee-Regular'), url(./Fonts/Handlee-Regular.ttf) format('truetype');
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
