upload pictures from web camera

--- a/src/Post/Post.module.scss
+++ b/src/Post/Post.module.scss
@@ -44,6 +44,12 @@
     }
   }
 
+  .time{
+    padding: 20px;
+    font-size: 14px;
+    color: grey;
+  }
+
   .comments_form {
     display: flex;
     border-top: 1px solid lightgrey;
