--- a/src/ProfilePage/ProfilePage.module.scss
+++ b/src/ProfilePage/ProfilePage.module.scss
@@ -4,12 +4,30 @@
   max-width: 960px;
   margin: 0 auto;
   padding: 0px 20px;
+  
+  .avatar_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  .avatarProfile {
-    margin: 0 0 0 3.5em;
-    width: 150px;
-    height: 150px;
+    .avatarProfile {
+      margin: 0 0 0 3.5em;
+      width: 150px;
+      height: 150px;
+    }
+  
+    .new_story_btn {
+      border: none;
+      background: transparent;
+      color: rgba(var(--d69, 0, 149, 246), 1);
+      font-size: 18px;
+      font-weight: 600;
+      outline: none;
+      margin: 1em 0 0 4.5em;
+      text-align: center;
+    }
   }
+ 
 
   .profileInfoWrapper {
     margin: 0 0 0 10%;
