--- a/src/ProfileSection/ProfileSection.css
+++ b/src/ProfileSection/ProfileSection.css
@@ -1,6 +1,6 @@
 .profile_section {
   width: 305px;
-  margin-top:  1.4em;
+  margin-top: 1.4em;
   position: fixed;
   right: 18%;
 }
@@ -36,16 +36,19 @@
 }
 
 .user_details span {
-  font-weight:  600;
+  font-weight: 600;
   font-size: 15px;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
 }
-
-input[type ="file"]{
+h2 {
+  margin: 0 !important;
+}
+input[type="file"] {
   display: none;
 }
 
-.upload_label{
+.upload_label {
   height: 51px;
   width: 100%;
   color: white;
@@ -55,18 +58,26 @@ input[type ="file"]{
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  border: none;
+  font-family: inherit;
+  font-weight: 600;
 }
 
-.new_post_header{
+.new_post_header {
   text-align: center;
 }
 
-.modal{ 
+.modal {
   display: flex;
   flex-direction: column;
 }
 
-.modal > *{ 
+.modal > * {
   margin: 10px 0 15px 0;
+}
+
+.modal img {
+  max-height: 250px;
 }
