--- a/src/ProfilePage/ProfilePage.module.scss
+++ b/src/ProfilePage/ProfilePage.module.scss
@@ -4,18 +4,20 @@
   max-width: 960px;
   margin: 0 auto;
   padding: 0px 20px;
-  
-  .avatar_container{
-    display: flex;
+
+  .avatar_container {
+    // display: flex;
     flex-direction: column;
     align-items: center;
 
     .avatarProfile {
-      margin: 0 0 0 3.5em;
-      width: 150px;
-      height: 150px;
+      img {
+        margin: 0 0 0 3.5em;
+        width: 150px !important;
+        height: 150px !important;
+      }
     }
-  
+
     .new_story_btn {
       border: none;
       background: transparent;
@@ -27,7 +29,6 @@
       text-align: center;
     }
   }
- 
 
   .profileInfoWrapper {
     margin: 0 0 0 10%;
