--- a/src/ProfilePage/ProfilePage.module.scss
+++ b/src/ProfilePage/ProfilePage.module.scss
@@ -4,22 +4,18 @@
   max-width: 960px;
   margin: 0 auto;
   padding: 0px 20px;
+  max-height: 200px;
 
   .avatar_container {
-    // display: flex;
-    flex-direction: column;
-    align-items: center;
-
     .avatarProfile {
-      img {
-        margin: 0 0 0 3.5em;
-        width: 150px !important;
-        height: 150px !important;
-      }
+      margin: 0 0 0 3.5em;
+      width: 150px;
+      height: 150px;
     }
 
-    .new_story_btn {
-      border: none;
+    button {
+      border: 2px solid rgba(var(--d69, 0, 149, 246), 1);
+      border-radius: 50px;
       background: transparent;
       color: rgba(var(--d69, 0, 149, 246), 1);
       font-size: 18px;
@@ -27,6 +23,9 @@
       outline: none;
       margin: 1em 0 0 4.5em;
       text-align: center;
+      &:hover {
+        box-shadow: 0 0 0 2px white, 0 0 0 4px rgba(var(--d69, 0, 149, 246), 1);
+      }
     }
   }
 
@@ -35,11 +34,10 @@
     max-width: 460px;
 
     h2 {
-      margin-top: 0.5em;
+      margin-top: 1em;
       margin-left: 3%;
       display: flex;
       justify-content: space-between;
-
       a {
         color: black;
         margin-right: 1em;
@@ -47,6 +45,7 @@
     }
 
     ul {
+      padding-top: 1em;
       margin-left: -3%;
 
       display: flex;
@@ -54,7 +53,7 @@
     }
 
     p {
-      margin-top: 3em;
+      margin-top: 2em;
       margin-left: 3%;
     }
   }
