Style added to  Notification section

--- a/src/Post/Post.module.scss
+++ b/src/Post/Post.module.scss
@@ -12,7 +12,7 @@
   }
 
   .post_image {
-    width: 100%;
+    width: 614px;
     object-fit: contain;
     border-top: 1px solid lightgrey;
     border-bottom: 1px solid lightgrey;
@@ -44,7 +44,7 @@
     }
   }
 
-  .time{
+  .time {
     padding: 20px;
     font-size: 14px;
     color: grey;
