--- a/src/Post/Post.module.scss
+++ b/src/Post/Post.module.scss
@@ -82,6 +82,7 @@
     }
 
     .post_btn {
+      cursor: pointer;
       border: none;
       background: transparent;
       color: rgba(var(--d69, 0, 149, 246), 1);
