--- a/src/Post/Post.module.scss
+++ b/src/Post/Post.module.scss
@@ -11,11 +11,49 @@
     padding: 2px 0 5px 1.1em;
   }
 
-  .post_image {
-    width: 614px;
-    object-fit: contain;
-    border-top: 1px solid lightgrey;
-    border-bottom: 1px solid lightgrey;
+  .post_image_container {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+
+    .post_image {
+      width: 614px;
+      object-fit: contain;
+      border-top: 1px solid lightgrey;
+      border-bottom: 1px solid lightgrey;
+    }
+
+    .heart {
+      fill: #efebeb;
+      position: absolute;
+      top: 150px;
+      font-size: 93px;
+      width: 69px;
+      animation: pulse 1s ease-in-out;
+      margin-bottom: -80px;
+      transform: scale(0);
+    }
+
+    @keyframes pulse {
+      0%,
+      to {
+        opacity: 0;
+        transform: scale(0);
+      }
+      15% {
+        opacity: 0.9;
+        transform: scale(1.2);
+      }
+      30% {
+        transform: scale(0.95);
+      }
+      45%,
+      80% {
+        opacity: 0.9;
+        transform: scale(1);
+      }
+    }
   }
 
   .liked_by {
@@ -51,7 +89,52 @@
     color: grey;
   }
 
- 
+  .comments_form {
+    display: flex;
+    border-top: 1px solid lightgrey;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-top: 4px;
+    height: 3em;
+    align-items: center;
+
+    aside {
+      z-index: 1;
+      top: 84%;
+      left: 8px;
+      position: absolute;
+    }
+
+    .post_textarea {
+      background: 0 0;
+      border: 0;
+      color: #262626;
+      display: flex;
+      flex-grow: 1;
+      font-size: inherit;
+      height: 18px;
+      max-height: 80px;
+      outline: 0;
+      padding: 0 25px;
+      resize: none;
+    }
+
+    svg {
+      cursor: pointer;
+      fill: #423e3e;
+      font-size: 2rem;
+    }
+
+    .post_btn {
+      cursor: pointer;
+      border: none;
+      background: transparent;
+      color: rgba(var(--d69, 0, 149, 246), 1);
+      font-size: 17px;
+      font-weight: 600;
+      outline: none;
+    }
+  }
 }
 
 .modal {
@@ -75,7 +158,7 @@
 
   aside {
     border-left: 1px solid lightgrey;
-    width: 100%;
+    width: 360px;
     .modal_header {
       display: flex;
       align-items: center;
@@ -113,7 +196,7 @@
 
     .modal_comments_form {
       padding: 15px 0 15px 1.1em;
-      
+
       .post_comments {
         margin-bottom: 20px;
         position: relative;
