--- a/src/ProfilePage/ProfilePage.module.scss
+++ b/src/ProfilePage/ProfilePage.module.scss
@@ -7,6 +7,13 @@
   max-height: 200px;
 
   .avatar_container {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
     .avatarProfile {
       margin: 0 0 0 3.5em;
       width: 150px;
@@ -21,7 +28,7 @@
       font-size: 18px;
       font-weight: 600;
       outline: none;
-      margin: 1em 0 0 4.5em;
+      margin: 1em 0 0 3.5em;
       text-align: center;
       &:hover {
         box-shadow: 0 0 0 2px white, 0 0 0 4px rgba(var(--d69, 0, 149, 246), 1);
