--- a/src/TextInput/TextInput.module.scss
+++ b/src/TextInput/TextInput.module.scss
@@ -12,7 +12,7 @@
     z-index: 1;
     top: -330px;
     left: 8px;
-    position: absolute;
+    position: absolute !important;
   }
 
   .post_textarea {
