--- a/src/Post/Comment/Comment.module.scss
+++ b/src/Post/Comment/Comment.module.scss
@@ -6,6 +6,8 @@
     font-size: 14px;
     margin-bottom: 20px;
     flex-direction: column;
+    flex-wrap: wrap;
+
     .comment_details{
         display: flex;
         align-items: center;
@@ -18,6 +20,11 @@
         .comment_username{
             
             margin-right: 10px;
+        }
+
+        >  p{
+            display: flex;
+            flex-wrap: wrap;
         }
 
        
