--- a/src/Post/Comment/Comment.module.scss
+++ b/src/Post/Comment/Comment.module.scss
@@ -1,38 +1,42 @@
-.comment_container{
-    display: flex;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+.comment_container {
+  display: flex;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-    font-size: 14px;
-    margin-bottom: 20px;
-    flex-direction: column;
+  font-size: 14px;
+  margin-bottom: 20px;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+  .comment_details {
+    display: flex;
+    align-items: center;
     flex-wrap: wrap;
 
-    .comment_details{
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-        .comment_avatar{
-            width: 30px;
-            height: 30px;
-            margin-right: 5px;
-        }
-        .comment_username{
-            
-            margin-right: 10px;
-        }
-
-        >  p{
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-       
+    a {
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      color: black;
+      .comment_avatar {
+        width: 30px;
+        height: 30px;
+        margin-right: 5px;
+      }
+      .comment_username {
+        margin-right: 10px;
+      }
     }
 
-    .time{
-        padding-left:36px;
-        font-size: 11px;
-        color: grey;
+    > p {
+      display: flex;
+      flex-wrap: wrap;
     }
+  }
+
+  .time {
+    padding-left: 36px;
+    font-size: 11px;
+    color: grey;
+  }
 }
