--- a/src/Post/Post.module.scss
+++ b/src/Post/Post.module.scss
@@ -4,11 +4,24 @@
   background-color: white;
   border: 1px solid lightgrey;
   margin-bottom: 4em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
 
   .post_header {
-    display: flex;
-    align-items: center;
-    padding: 2px 0 5px 1.1em;
+    padding: 5px 0 5px 1.1em;
+
+    a {
+      text-decoration: none;
+      color: black;
+      font-family: inherit;
+      display: flex;
+      align-items: center;
+
+      h3 {
+        font-weight: 600;
+        font-size: 16px;
+      }
+    }
   }
 
   .post_image_container {
@@ -89,12 +102,13 @@
     font-size: 14px;
     color: grey;
   }
-  
 }
 
 .modal {
   background-color: white;
-
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
+    
   > div:first-child {
     background-color: #fafafa !important;
   }
@@ -103,11 +117,11 @@
     margin: 0;
     object-fit: contain;
     display: flex;
+    max-height: 543px;
 
     .modal_image {
       object-fit: contain;
       width: 600px;
-      // padding: 16px 24px 16px 24px;
     }
   }
 
@@ -115,48 +129,57 @@
     border-left: 1px solid lightgrey;
     width: 427px;
     .modal_header {
-      display: flex;
-      align-items: center;
       padding: 12px 0 12px 1.1em;
       border-bottom: 1px solid lightgrey;
       font-size: 12px;
 
-      .modal_avatar {
-        margin-right: 10px;
-        height: 36px !important;
-        width: 36px !important;
+      a {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: black;
+
+        .modal_avatar {
+          margin-right: 10px;
+          height: 36px !important;
+          width: 36px !important;
+        }
       }
     }
 
     .post_modal_description_container {
-      display: flex;
-      align-items: center;
       padding: 15px 0 15px 1.1em;
       font-size: 12px;
 
-      .post_modal_description {
-        font-weight: normal;
-        padding: 0 10px;
-      }
+      a {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: black;
 
-      .modal_avatar {
-        height: 36px !important;
-        width: 36px !important;
-      }
+        .post_modal_description {
+          font-weight: normal;
+          padding: 0 10px;
 
-      .username {
-        margin-right: 7px;
+          .username {
+            margin-right: 7px;
+          }
+        }
+
+        .modal_avatar {
+          height: 36px !important;
+          width: 36px !important;
+        }
       }
     }
 
     .modal_comments_form {
-      padding: 15px 0 15px 1.1em;
-
       .post_comments {
         margin-bottom: 20px;
         position: relative;
         overflow: auto;
         height: 285px;
+        padding: 15px 0 15px 1.1em;
       }
       .time {
         padding: 20px;
