--- a/src/NotificationsPop/NotificationBar/NotificationBar.module.scss
+++ b/src/NotificationsPop/NotificationBar/NotificationBar.module.scss
@@ -4,22 +4,37 @@
   width: 483px;
   align-items: center;
   height: 68px;
-  font-size: 16px;
+  font-size: 15px;
+  padding-right: 5px;
 
-  .blockNotification {
+  .details {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 6px;
+    .blockNotification {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 6px;
 
-    span{
-      margin-right: 6px;
-    }
-    
-    .date{
-      font-size: 12px;
-      color: lightgrey;
+      span {
+        margin-right: 6px;
+
+        a {
+          display: flex;
+          align-items: center;
+          color: black;
+          text-decoration: none;
+
+          > div {
+            margin-right: 6px;
+          }
+        }
+      }
+
+      .date {
+        font-size: 12px;
+        color: lightgrey;
+        margin-left: 6px;
+      }
     }
   }
-
 }
