--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -6,3 +6,12 @@
   position: relative;
 }
 
+.message{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-size: 24px;
+  color: rgb(185, 185, 185);
+  max-width: 600px;
+}
