--- a/src/Post/Post.module.scss
+++ b/src/Post/Post.module.scss
@@ -1,9 +1,9 @@
 .post {
   border-radius: 3px;
-  max-width: 614px;
   background-color: white;
   border: 1px solid lightgrey;
   margin-bottom: 4em;
+  max-width: 614px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif;
 
@@ -88,9 +88,10 @@
   .post_comments {
     padding: 0 20px 20px;
     position: relative;
-    overflow-y: auto;
-    overflow-x: none;
+    // overflow-y: auto;
+    // overflow-x: none;
     max-height: 285px;
+    overflow-wrap: normal;
 
     .view_comments_text {
       color: grey;
@@ -105,14 +106,16 @@
 }
 
 .modal {
+  
   background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif;
     
   > div:first-child {
-    background-color: #fafafa !important;
+    background-color: #262626 !important;
   }
 
+  
   .modal_image_container {
     margin: 0;
     object-fit: contain;
@@ -127,7 +130,7 @@
 
   aside {
     border-left: 1px solid lightgrey;
-    width: 427px;
+    width: 360px;
     .modal_header {
       padding: 12px 0 12px 1.1em;
       border-bottom: 1px solid lightgrey;
@@ -175,7 +178,7 @@
 
     .modal_comments_form {
       .post_comments {
-        margin-bottom: 20px;
+        margin-bottom: 45px;
         position: relative;
         overflow: auto;
         height: 285px;
