--- a/src/ProfilePage/ProfilePage.module.scss
+++ b/src/ProfilePage/ProfilePage.module.scss
@@ -106,7 +106,7 @@
       margin-top: 2em;
       margin-left: 7%;
       margin-right: 15%;
-      font-size: 13px;
+      font-size: 1.1rem;
       text-align: left;
     }
   }
