--- a/src/ProfileSection/ProfileSection.css
+++ b/src/ProfileSection/ProfileSection.css
@@ -22,7 +22,7 @@
   align-items: center;
 }
 
-.user_details a{ 
+.user_details a {
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -41,6 +41,14 @@
   font-size: 15px;
   font-weight: 600;
   outline: none;
+  box-shadow: 0 0 0 0px white, 0 0 0 0px rgba(var(--d69, 0, 149, 246), 1);
+
+
+  -webkit-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  -moz-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  -ms-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  transition: all 300ms ease-in-out;
 }
 
 .new_post_btn:hover {
@@ -61,7 +69,7 @@
 }
 
 h2 {
-  margin: 0;
+  margin: 8px;
 }
 
 input[type="file"] {
@@ -101,4 +109,86 @@ input[type="file"] {
 
 .modal img {
   max-height: 250px;
+}
+.explore_users{
+  margin-top: 1em;
+  font-size: 22px;
+  color: rgb(194, 194, 194);
+}
+.users_section{
+  margin-top: 2em;
+}
+.users_section > div {
+  display: flex;
+  justify-content: space-between;
+}
+
+.users_section > div > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  width: 45px;
+  height: 16px;
+  margin: 14px;
+  color: rgba(var(--d69, 0, 149, 246), 1);
+  text-decoration: none;
+  font-size: 16px;
+  transition: all 0.1s ease-in  ;
+  text-transform: none;
+}
+
+.users_section > div > a:hover {
+  background-color: rgb(250,250,250);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  width: 45px;
+  height: 16px;
+  margin: 14px;
+  text-decoration: none;
+  font-size: 16px;
+  transition: all 0.5s ease-in  ;
+  text-transform: none;
+  box-shadow: 0 0 0 2px rgb(250,250,250), 0 0 0 4px rgba(var(--d69, 0, 149, 246), 1);
+
+}
+
+.profile_section_footer {
+  margin: 2em 0 0 0;
+  color: rgb(194, 194, 194);
+}
+
+.profile_section_footer_link {
+  color: rgb(194, 194, 194);
+}
+
+.profile_section_footer_link:active,
+.profile_section_footer_link:hover {
+  color: black;
+}
+
+@-webkit-keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 2px white, 0 0 0 4px rgba(var(--d69, 0, 149, 246), 1);
+  }
+}
+
+@-moz-keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 2px white, 0 0 0 4px rgba(var(--d69, 0, 149, 246), 1);
+  }
+}
+
+@-ms-keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 2px white, 0 0 0 4px rgba(var(--d69, 0, 149, 246), 1);
+  }
+}
+
+@keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 2px white, 0 0 0 4px rgba(var(--d69, 0, 149, 246), 1);
+  }
 }
