Refactored functionalities using Redux store

--- a/src/Post/Comment/Comment.module.scss
+++ b/src/Post/Comment/Comment.module.scss
@@ -35,7 +35,8 @@
       display: flex;
       flex-direction: column;
       overflow-wrap: anywhere;
-      margin-left: 2em;
+      margin-top: 0;
+      margin-left: 3em;
       margin-right: 1em;
     }
   }
