--- a/src/Post/Post.module.scss
+++ b/src/Post/Post.module.scss
@@ -86,7 +86,7 @@
   }
 
   .post_comments {
-    padding: 0 20px 20px;
+    padding: 0 20px 0px;
     position: relative;
     // overflow-y: auto;
     // overflow-x: none;
@@ -102,20 +102,19 @@
     padding: 20px;
     font-size: 14px;
     color: grey;
+    margin-left: 80%;
   }
 }
 
 .modal {
-  
   background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif;
-    
+
   > div:first-child {
     background-color: #262626 !important;
   }
 
-  
   .modal_image_container {
     margin: 0;
     object-fit: contain;
