--- a/src/ProfileSection/ProfileSection.css
+++ b/src/ProfileSection/ProfileSection.css
@@ -1,8 +1,8 @@
 .profile_section {
-  width: 305px;
+  width: 24vw;
   margin-top: 1.4em;
   position: fixed;
-  right: 18%;
+  right: 15vw;
 }
 
 .profile_section_header {
