--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -8,12 +8,14 @@
   border-bottom: 1px solid lightgray;
   margin-bottom: 40px;
   z-index: 2;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
 }
 .app_header nav {
   margin: 0 15%;
-  max-width: 75%;
+  max-width: 71vw;
   height: 54px;
-
   display: flex;
   justify-content: center;
 }
@@ -29,9 +31,9 @@
 #mainNav,
 #linkNav {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
+    justify-content: center;
+    align-items: center;
+    width: 24vw;
 }
 #linkNav {
   justify-content: flex-end;
@@ -68,11 +70,10 @@
   width: 24px;
 }
 
-
 .options {
   display: none;
   position: absolute;
-  margin-top:-10px;
+  margin-top: -10px;
   padding-top: 0;
   padding: 10px;
   background-color: white;
@@ -81,19 +82,27 @@
   right: 15%;
 
   font-size: 16px !important;
-  p{
+  p {
     cursor: pointer;
-
   }
-  a{
+  a {
     text-decoration: none;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+
+    p {
+      padding-left: 5px;
+    }
   }
-  
 }
 .options:hover {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  width: 130px;
 }
 .profile_nav:hover + .options {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  width: 130px;
 }
