--- a/src/ProfilePage/ProfilePage.module.scss
+++ b/src/ProfilePage/ProfilePage.module.scss
@@ -1,10 +1,10 @@
 .profilePage_header {
   background-color: inherit;
   display: flex;
-  max-width: 960px;
+  max-width: 66vw;
   margin: 0 auto;
   padding: 0px 20px;
-  max-height: 200px;
+  max-height: 40vw;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
@@ -44,7 +44,7 @@
 
   .profileInfoWrapper {
     margin: 0 0 0 10%;
-    max-width: 460px;
+    max-width: 29vw;
 
     h2 {
       margin-top: 1em;
@@ -54,7 +54,7 @@
       font-family: inherit;
       font-weight: 400;
       font-size: 21px;
-      width: 400px;
+      width: 29vw;
       
       a {
         color: black;
