--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -9,8 +9,7 @@
   margin-bottom: 40px;
   z-index: 2;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .app_header nav {
   margin: 0 15%;
@@ -31,13 +30,14 @@
 #mainNav,
 #linkNav {
   display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 24vw;
+  justify-content: center;
+  align-items: center;
+  width: 24vw;
 }
 #linkNav {
   justify-content: flex-end;
-  margin-right: 4em;
+  margin-right: 2vw;
+  margin-left: 3vw;
 }
 #linkNav li {
   margin: 15px 0px 8px 18px;
