--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -80,6 +80,8 @@
   border: none !important;
   top: 3em;
   right: 15%;
+  border-radius: 6px;
+  box-shadow: 0 0 5px 1px rgba(var(--jb7,0,0,0),.0975);
 
   font-size: 16px !important;
   p {
@@ -90,7 +92,9 @@
     cursor: pointer;
     display: flex;
     align-items: center;
-
+    &:hover{
+      background-color: rgba(var(--b3f,250,250,250),1);
+    }
     p {
       padding-left: 5px;
     }
