post image style changed

--- a/src/Post/Post.module.scss
+++ b/src/Post/Post.module.scss
@@ -36,7 +36,7 @@
       object-fit: contain;
       border-top: 1px solid lightgrey;
       border-bottom: 1px solid lightgrey;
-      height: 35vw;
+      max-height: 35vw;
     }
 
     .heart {
