--- a/src/ChatRoom/MessageForm/MessageForm.module.scss
+++ b/src/ChatRoom/MessageForm/MessageForm.module.scss
@@ -1,7 +1,20 @@
 .messageWrapper {
   padding-top: 1em;
-
   padding-left: 12px;
   overflow-y: auto;
   height: 550px;
+}
+.message {
+  padding-top: 1em;
+  padding-left: 12px;
+  overflow-y: auto;
+  height: 550px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-size: 24px;
+  color: rgb(185, 185, 185);
+  max-width: 600px;
+  flex-direction: column;
 }
