--- a/src/Post/Post.module.scss
+++ b/src/Post/Post.module.scss
@@ -90,13 +90,12 @@
   .post_comments {
     padding: 0 20px 0px;
     position: relative;
-    // overflow-y: auto;
-    // overflow-x: none;
     max-height: 285px;
     overflow-wrap: normal;
 
     .view_comments_text {
       color: grey;
+      cursor: pointer;
     }
   }
 
